# webtexter

./: .cproject  .project  Makefile.am  README.md  configure.ac
data/: webtexter.desktop  webtexter.desktop.in
debian/: changelog  control  copyright  postinst  postrm  rules
po/: Makefile
src/: Makefile.am  betamax_sender.c  betamax_sender.h  blueface_sender.c  exetel_sender.h  he-about-dialog.h  http_sender.c  http_sender.h  main.c  main.h  meteor_sender.c  meteor_sender.h  network_utilities.c  o2_sender.c  o2_sender.h  pennytel_sender.h  settings.c  settings.h  three_sender.h  web_proxy_sender.c  web_proxy_sender.h  websmsru_sender.c  websmsru_sender.h
tags/webtexter-0.4/: configure.ac
tags/webtexter-0.4/po/: Makefile
tags/webtexter-0.4/src/: localisation.h  main.h  message_logger.c
tags/webtexter-0.7/: configure.ac
tags/webtexter-0.7.1/debian/: control
tags/webtexter-0.7.1/src/: Makefile.am
tags/webtexter-0.7.2/: configure.ac
tags/webtexter-0.7.2/src/: main.h
tags/webtexter-0.7.3/: configure.ac
tags/webtexter-0.7.4/data/: Makefile.am  org.maemo.webtexter.service  webtexter.desktop.in
tags/webtexter-0.7.4/po/: Makefile
tags/webtexter-0.7.4/src/: exetel_sender.c  network_utilities.h
tags/webtexter-0.7.5/: configure.ac
tags/webtexter-0.7.5/src/: http_sender.c  settings.h
tags/webtexter-0.7.6/src/: exetel_sender.h
tags/webtexter-0.7.8/data/icons/26x26/: webtexter.png.en
tags/webtexter-0.7.8/po/: Makefile
tags/webtexter-0.7.8/src/: o2_sender.c  settings.c
tags/webtexter-0.7.9/po/: Makefile
tags/webtexter-0.7.9/src/: vodafone_sender.h
tags/webtexter-0.7/data/: webtexter.desktop  webtexter.desktop.in
tags/webtexter-0.7/src/: main.h  three_sender.c
tags/webtexter-0.8/data/: webtexter.desktop
tags/webtexter-0.8/po/: Makefile
tags/webtexter-0.8/src/: http_sender.h
tags/webtexter-0.9/data/: org.maemo.webtexter.service.in
tags/webtexter-0.9/po/: Makefile
trunk/webtexter/: Makefile.am  configure.ac
trunk/webtexter-0.9/src/: three_sender.c  web_proxy_sender.c
trunk/webtexter/data/: com.setkia.webtexter.service.in  webtexter.desktop  webtexter.desktop.in
trunk/webtexter/debian/: changelog  control
trunk/webtexter/po/: Makefile
trunk/webtexter/src/: betamax_sender.c  exetel_sender.c  he-about-dialog.c  http_sender.c  main.c  main.h  message_logger.c  pennytel_sender.c  settings.c  settings.h  vodafone_sender.c
webtexter/: Makefile.am  configure.ac
webtexter-0.9/: Makefile.am  autogen.sh
webtexter-0.9/src/: Makefile.am  http_sender.c  http_sender.h  o2_sender.c  settings.c
webtexter/data/: Makefile.am  com.setkia.webtexter.service  webtexter.desktop  webtexter.desktop.in
webtexter/debian/: changelog  control  postrm  rules
webtexter/po/: Makefile
webtexter/src/: Makefile.am  betamax_sender.c  blueface_sender.c  blueface_sender.h  exetel_sender.c  http_sender.c  http_sender.h  main.c  main.h  message_logger.c  message_logger.h  pennytel_sender.c  settings.c  settings.h  vodafone_sender.c  web_proxy_sender.c  websmsru_sender.c
