# This software is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2.1 of
# the License, or (at your option) any later version.
#
# This software is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this software; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
# 02110-1301 USA
#
 
dbusdir=$(datadir)/dbus-1/services
dbus_DATA=com.setkia.webtexter.service

desktopdir=$(datadir)/applications/hildon
desktop_DATA = webtexter.desktop

icon_26x26_DATA = icons/26x26/webtexter.png
icon_48x48_DATA = icons/48x48/webtexter.png 

EXTRA_DIST = $(dbus_DATA) $(desktop_DATA) $(icon_26x26_DATA) $(icon_48x48_DATA) 
