EXTRA_DIST = \
	main.h main.c \
	http_sender.h http_sender.c \
	o2_sender.h o2_sender.c \
	settings.h settings.c \
	vodafone_sender.h vodafone_sender.c \
	three_sender.h three_sender.c \
	meteor_sender.h meteor_sender.c \
	web_proxy_sender.h web_proxy_sender.c \
	network_utilities.h network_utilities.c \
	message_logger.h message_logger.c \
	blueface_sender.h blueface_sender.c \
	betamax_sender.h betamax_sender.h \
	websmsru_sender.h \ websmsru_sender.c
